changes on maps

--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 
   <p> If you bought apple stock a long time ago you're probably rich. That's because it went up really fast! See for yourself in the chart below. </p>
 
+  
+  <div id="apple-chart-container">
   <h2> Apple Stocks are Really Rising! </h2>
-  <h3> ...more than any other fruit-based corporation. </h3>
+  <h3> ...more than any other fruit-based corporation. </h3></div>
+
+  
+  <p>Look at that!</p>
+
+  <div id="google-chart-container"></div>
+
 
 <script src="//web.archive.org/web/20160418220302js_/http://d3js.org/d3.v3.min.js"></script>
-<script src="script/chart.js" type="text/javascript"></script>
+<script src="script/chart1.js" type="text/javascript"></script>
+<script src="script/chart2.js" type="text/javascript"></script>
+
 
 
 </body>
